# rubi-py

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  test.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: CODEOWNERS  automated_testing.yml  deployment_and_release.yml  pr_lint.yml  pr_linting.yml  rubi-cd.yml  rubi-ci.yml
bots/: .dockerignore  Dockerfile  README.md  example_bot_config.yaml  main.py  pyproject.toml
bots/event_trading_framework/: README.md  __init__.py  base_event_trading_framework.py  base_event_trading_framwork.py  gas_tracker.py
bots/event_trading_framework/helpers/: __init__.py  event_queues.py  transaction_manager.py
bots/event_trading_framework/types/: event_queues.py  inventory.py  types.py
bots/example_bots/: README.md  __init__.py  grid.py  gridbot.py
bots/example_bots/grid_types/: active_limit_order.py  grid_params.py
bots/example_bots/helpers/: active_limit_order.py  gas_manager.py  grid.py  inventory.py
bots/example_bots/types/: __init__.py  grid_params.py
dashboards/: README.md  pyproject.toml  requirements.txt
dashboards/dashboards/: aid.py  tools.py
dashboards/dashboards/aid/: aid.py  dump.rdb  tools.py  worker.py
dashboards/dashboards/assets/: style.css
network/: README.md  network_builder.py  network_visualizer.py  pyproject.toml
network/network/: dai_usdc.pkl  data.py  network_analysis.py  network_builder.py
network/rubi_network/: __init__.py  network.py  network_analysis.py  nodes.py
network/rubi_network/data/: __init__.py  data.py  nodes.py
rubi/: README.md  logging_config.py  pyproject.toml  scripts.py  test.py
rubi/docs/examples/: custom_token_addresses.yaml  example.py  example_callback.py  example_order_tracking_client.py  example_poller.py  example_query.py  example_queue_handler.py  example_simulate_transaction.py  market_aid.py  market_aid_basics.rst
rubi/docs/source/: client.rst  conf.py  example.rst  index.rst  overview.rst  quickstart.rst  rubi.contracts.contract_types.rst  rubi.contracts.rst  rubi.contracts.types.rst  rubi.data.helper.rst  rubi.data.helpers.rst  rubi.data.rst  rubi.network.rst  rubi.rst  rubi.rubicon_types.rst  rubi.types.rst  usage.rst
rubi/network_config/: README.md
rubi/network_config/abis/: erc20.json
rubi/network_config/abitrum_goerli/: network.yaml
rubi/network_config/arbitrum_one/: network.yaml
rubi/network_config/base/: network.yaml
rubi/network_config/optimism/: network.yaml
rubi/network_config/optimism_goerli/: network.yaml
rubi/network_config/polygon_mumbai/: network.yaml
rubi/network_config/polygon_mumbai/abis/: market.json  router.json
rubi/rubi/: README.md  __init__.py  client.py  log_test.py  order_tracking_client.py  rubi.py
rubi/rubi/book/: __init__.py  book.py
rubi/rubi/contracts/: __init__.py  aid.py  base_contract.py  bath.py  erc20.py  house.py  market.py  router.py  transaction_handler.py
rubi/rubi/contracts/contract_types/: __init__.py  events.py  transaction_receipt.py  transaction_reciept.py
rubi/rubi/contracts/helper/: __init__.py  erc20.py  rolodex.py
rubi/rubi/contracts/helper/abis/: BathHouse.json  BathPair.json  BathToken.json  MarketAid.json  MarketAidFactory.json  RubiconMarket.json  RubiconRouter.json
rubi/rubi/contracts/types/: transaction_reciept.py
rubi/rubi/contracts_v2/: __init__.py  erc20.py  market.py  router.py
rubi/rubi/contracts_v2/helper/: __init__.py  base_contract.py  event_types.py
rubi/rubi/contracts_v2/types/: __init__.py  base_contract.py  events.py
rubi/rubi/data/: README.md  __init__.py  data.py  market.py
rubi/rubi/data/helper/: query_types.py  validation.py
rubi/rubi/data/helpers/: __init__.py  query_types.py  validation.py
rubi/rubi/data/processing/: README.md  __init__.py  aid.py  user.py
rubi/rubi/data/processing/helper/: __init__.py  processing.py
rubi/rubi/data/sources/: __init__.py  aid.py  market.py
rubi/rubi/data/sources/helper/: README.md  __init__.py  gas.py  price.py  rolodex.py
rubi/rubi/data_v2/: data.py
rubi/rubi/data_v2/sources/: aid.py  market.py
rubi/rubi/data_v2/sources/helper/: __init__.py  rolodex.py  tokens.py
rubi/rubi/logging/: app.py
rubi/rubi/logging/templates/: index.html
rubi/rubi/network/: __init__.py  network.py
rubi/rubi/rubicon_types/: __init__.py  erc20_transactions.py  order.py  order_query.py  orderbook.py  orders.py  pair.py  trade_query.py
rubi/rubi/types/: __init__.py  conversion_helper.py  from_rubicon.py  order.py  orderbook.py  pair.py
rubi/tests/: README.md  conftest.py  custom_token_addresses.yaml  fixtures.py  rubi_test.py  rubi_tests.py  rubi_v2_test.py  test_fixtures.py  test_notebook.ipynb  tests.py
rubi/tests/abis/: BathHouse.json  BathToken.json  MarketAid.json  MarketAidFactory.json  RubiconMarket.json  RubiconRouter.json
rubi/tests/fixtures/: __init__.py  setup_ethereum_test_environment.py
rubi/tests/fixtures/helper/: __init__.py  deploy_contract.py  execute_transaction.py
rubi/tests/test_network_config/: test_config.yaml
rubi/tests/test_network_config/abis/: market.json  router.json
rubi/tests/test_network_config/contract_interfaces/: RubiconMarket.json  RubiconMarketAid.json  RubiconMarketAidFactory.json  RubiconRouter.json
