[tool.poetry]
name = "rubi_network"
version = "0.1.0"
description = "A network analysis framework using the rubi-py client library."
authors = ["denver <denver@rubicon.finance>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "1.0.0"
networkx = "^3.1"
numpy = "^1.25.1"
pyvis = "^0.3.2"
dash = "^2.11.1"
dash-cytoscape = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
rubi = { path = "../rubi", develop = true }
ipykernel = "^6.25.0"
