[tool.poetry]
name = "rubi"
version = "2.0.4"
description = "A python SDK for the Rubicon Protocol"
authors = ["denver <denver@rubicon.finance>", "adam <adam@rubicon.finance>"]
readme = "README.md"
include = ["network_config/**/*"]


[tool.poetry.dependencies]
python = "^3.10"
sphinx = "7.0.1"
web3 = "6.4.0"
hexbytes = "0.3.0"
attributedict = "0.3.0"
eth-abi = "4.0.0"
pytest = "7.3.1"
eth-tester = "0.9.0b1"
py-evm = "0.7.0a2"
eth-utils = "2.1.0"
subgrounds = { version = "1.6.0", extras = ["dash"] }
pyyaml = "6.0.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "0.21.1"
ipykernel = "6.23.1"
jupyter = "1.0.0"

[tool.poetry.extras]
docs = ["sphinx"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "scripts:test"
test_with_coverage = "scripts:test_with_coverage"
generate_coverage_report = "scripts:test_coverage_html"